k8s/template/practice/init-c-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-c-pod
  labels:
    app: init-c
spec:
  containers:
  - name: init-container
    image: busybox
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
