k8s/template/practice/liveness-tcp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-tcp-pod
spec:
  containers:
  - name: liveness-tcp-container
    image: registry.cn-hangzhou.aliyuncs.com/zhoubo56/myapp:v1
    imagePullPolicy: IfNotPresent
    livenessProbe:
      tcpSocket:
        port: 8080
      initialDelaySeconds: 5
      periodSeconds: 3
      timeoutSeconds: 1
  imagePullSecrets:
    - name: ali-zhoubo
