k8s/template/practice/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
      name: nginx-deployment-template
    spec:
      containers:
        - name: nginx-deployment-container
          image: registry.cn-hangzhou.aliyuncs.com/zhoubo56/myapp:v1
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: ali-zhoubo
