k8s/template/practice/readiness-httpget-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-httpget-pod
spec:
  containers:
  - name: readiness-httpget-container
    image: registry.cn-hangzhou.aliyuncs.com/zhoubo56/myapp:v1
    imagePullPolicy: IfNotPresent
    readinessProbe:
      httpGet:
        port: 80
        path: /NotExist.html
      initialDelaySeconds: 1
      periodSeconds: 3
  imagePullSecrets:
    - name: ali-zhoubo
