k8s/template/practice/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-test
spec:
  rules:
    - host: v1.zhoubo.com
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx-service
            servicePort: 80
